# opendronelog-sync

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: android-release.yml  desktop-release.yml  publish-play-store.yml
scripts/mobile/: apply-android-cleartext-policy.sh  sync-android-icons.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  platform.ts  storage.ts
