[package]
name = "opendronelog-sync"
version = "0.1.0"
description = "OpenDronelog Sync desktop and mobile client"
authors = ["Arpan Ghosh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opendronelog_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "multipart", "json"] }
sha2 = "0.11.0"
walkdir = "2.5.0"
hex = "0.4.3"
tauri-plugin-dialog = "2.6.0"
notify = "8.2.0"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
rfd = "0.17.2"

